[package]
name = "vim-telegam"
version = "0.1.0"
edition = "2021"
description = "A modern, Vim-style terminal Telegram client"
license = "MIT"

[[bin]]
name = "vt"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = { version = "0.29", features = ["all-widgets"] }
crossterm = { version = "0.28", features = ["event-stream"] }
tui-textarea = "0.7"
ratatui-image = { version = "4", features = ["crossterm"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# Fuzzy search (Helix's engine)
nucleo = "0.5"

# Telegram (MTProto) - optional at the module level; pinned here so it's ready.
grammers-client = "0.7"
grammers-session = "0.7"
grammers-tl-types = "0.7"
rpassword = "7"

# Utility
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
directories = "5"
unicode-width = "0.2"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
